tests/miniJava/neg/005831_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { length System.out.println ( { } ) ; } }
